--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "next": "^9.3.5",
     "nprogress": "^0.2.0",
+    "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
