--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "heroku-postbuild": "next build"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.37",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "@apollo/react-ssr": "^4.0.0-beta.1",
+    "apollo-upload-client": "^13.0.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -32,6 +36,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@apollo/react-testing": "^4.0.0-beta.1",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@testing-library/jest-dom": "^5.5.0",
