--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@apollo/client": "^3.0.0-beta.37",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-ssr": "^4.0.0-beta.1",
-    "apollo-upload-client": "^13.0.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
+    "apollo-upload-client": "^13.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-styled-components": "^1.10.7",
     "date-fns": "^2.12.0",
     "downshift": "^5.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "lodash.debounce": "^4.0.8",
     "next": "^9.3.5",
+    "next-with-apollo": "^5.0.1",
     "nprogress": "^0.2.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
